# image-similarity-engine

./: .gitignore  demo.py  deploy.sh  docker-compose.full.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.scale.yml  haproxy.cfg  nginx-temp.conf  nginx.conf  redis-endpoint.sh  run-docker.sh
aws-deploy/: backend-task-definition.json.bak  create-ecr.sh  create-redis-simple.sh  create-redis.sh  deploy-fix-v2.sh  deploy-fix-v3.sh  deploy-fix-v4.sh  deploy-fix.sh  deploy-force-amd64.sh  deploy-full.sh  deploy-minimal.sh  deploy-production.sh  deploy-qdrant.sh  deploy-redis.sh  ecs-task-definition-v2.json.bak  fix-ecr-push.sh  (+8 more)
backend/: .env.example  Dockerfile  Dockerfile.amd64  Dockerfile.ecs  Dockerfile.full  Dockerfile.minimal  Dockerfile.production  Dockerfile.standalone  Dockerfile.test  README.md  celery_worker.py  deploy-eks.sh  main_standalone.py  pyproject.toml  requirements.txt  run_flower.py
backend/app/: config.py  config_scale.py  main.py  main_simplified.py
backend/app/api/: dependencies.py
backend/app/api/endpoints/: batch.py  health.py  search.py
backend/app/core/: celery_app.py  metrics.py
backend/app/services/: autoscaler.py  batch_processor.py  cache_service.py  cache_strategy.py  connection_pool.py  ml_service.py  ml_service_with_metrics.py  performance_monitor.py  query_optimizer.py  sharding_service.py  vector_service.py
backend/app/tasks/: image_tasks.py
backend/app/utils/: logging.py
backend/scripts/: download_models.py  generate_test_data.py  load_test_fixed.py  load_test_million.py  load_test_simple.py
(+72 files in other folders)
